2023-02-12
    * Added ability to run few instances of scripts for different windows simultaneously.

2023-02-11
    * Added run-clicker.sh script to make running with bubbles (bubbling) easier.

2023-02-05
    * Rewrited mechanism of searching the trigger phrase by afk-check-clicker: 
      Checking TriggerPhrase in a screenshot in one call to tesseract-ocr now.

2023-02-03
    * Nesting userconfig files is available now. Values in nested userconfig files 
      have higher priority than its in a parent conf file. 