@@ -16,7 +16,7 @@ eval work_with_windows=`./functions/get_variable_wrapper.py work_with_windows`
 
 
 # Override default value
-SCRIPT_LOGGING_LEVEL="INFO"
+#SCRIPT_LOGGING_LEVEL="INFO"
 
 logger "INFO" "Starting..."
 
