@@ -1,3 +1,7 @@
+2023-02-14
+    * Added measuring resource consumption for OCR process across all scripts.
+      CPU utilization will be measuring when logging level = DEBUG.
+
 2023-02-12
     * Added ability to run few instances of scripts for different windows simultaneously.
 
